force-app/main/default/objects/Sales_order_item__c/Sales_order_item__c.object-meta.xml
<CustomObject>
    <label>Sales order item</label>
    <nameField>
        <displayFormat>ITEM-{0000}</displayFormat>
        <label>Sales order item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales order items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>