force-app/main/default/objects/Sales_order_item__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Sales order items</relationshipLabel>
    <relationshipName>Sales_order_items</relationshipName>
    <type>Lookup</type>
</CustomField>