force-app/main/default/objects/Sales_order_item__c/fields/Sales_order__c.field-meta.xml
<CustomField>
    <fullName>Sales_order__c</fullName>
    <label>Sales order</label>
    <referenceTo>Sales_order__c</referenceTo>
    <relationshipLabel>Sales order items</relationshipLabel>
    <relationshipName>Sales_order_items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>