force-app/main/default/objects/Sales_order_item__c/fields/Sales_order_Status__c.field-meta.xml
<CustomField>
    <fullName>Sales_order_Status__c</fullName>
    <formula>TEXT(Sales_order__r.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales order Status</label>
    <type>Text</type>
</CustomField>