force-app/main/default/objects/Sales_order_item__c/fields/SO_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>SO_Item_Id__c</fullName>
    <label>SO Item Id</label>
    <type>AutoNumber</type>
</CustomField>