force-app/main/default/objects/Sales_order_item__c/fields/Total_after_discount__c.field-meta.xml
<CustomField>
    <fullName>Total_after_discount__c</fullName>
    <label>Total after discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>